syntax = "proto3";

package grpcdemo;

option java_multiple_files = true;
option java_package = "dev.appkr.grpcdemo";
option java_outer_classname = "Hello";

import "google/protobuf/empty.proto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }

  rpc invalidArgument(google.protobuf.Empty) returns (google.protobuf.Empty) {
  }

  rpc notFound(google.protobuf.Empty) returns (google.protobuf.Empty) {
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
  int32 luckyNumber = 2;
  string principal = 3;
}
